--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,43 +7,139 @@
 * Author URI: http://hackeryou.com
 */
 
-@import 'normalize';
-@import 'typography';
-@import 'navigation';
-@import 'sidebar';
-@import 'comments';
-@import 'footer';
-/*
-====================================
-Default Styling
-====================================
-*/
+//////FONTS/////
+$Roboto: 'Roboto Condensed', sans-serif;
+$Raleway:'Raleway', sans-serif;
 
-img {
-	max-width: 100%;
-}
+/////COLORS/////
+$lightBlue: #E7F3F7;
+$red: #EF634B;
+
+
+article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block;}audio,canvas,video{display:inline-block;}audio:not([controls]){display:none;height:0;}[hidden]{display:none;}html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}a:focus{outline:thin dotted;}a:active,a:hover{outline:0;}h1{font-size:2em;}abbr[title]{border-bottom:1px dotted;}b,strong{font-weight:700;}dfn{font-style:italic;}mark{background:#ff0;color:#000;}code,kbd,pre,samp{font-family:monospace, serif;font-size:1em;}pre{white-space:pre-wrap;word-wrap:break-word;}q{quotes:\201C \201D \2018 \2019;}small{font-size:80%;}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}sup{top:-.5em;}sub{bottom:-.25em;}img{border:0;}svg:not(:root){overflow:hidden;}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em;}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0;}button,input{line-height:normal;}button,html input[type=button],/* 1 */
+input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}button[disabled],input[disabled]{cursor:default;}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0;}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box;}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none;}textarea{overflow:auto;vertical-align:top;}table{border-collapse:collapse;border-spacing:0;}body,figure{margin:0;}legend,button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}
+
+.clearfix:after {visibility: hidden; display: block; font-size: 0; content: " "; clear: both; height: 0; }
+
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 body {
-	color: #333;
+	background-color: #E7F3F7;
 }
 
-.container {
-	max-width: 1200px;
+.wrapper {
+	max-width: 1080px;
 	margin: 0 auto;
 }
 
-.content {
-	float: left;
-	width: 65%;
-	margin-right: 5%;
+
+//////HEADER//////
+.navHeader {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
+	margin: 1rem 0;
+	ul#menu-header-menu {
+		width: 60%;
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-end;
+		padding-left: 0;
+		list-style-type: none;
+		margin: left;
+		margin: 0;
+		li {
+			font-family: $Roboto;
+			text-transform: uppercase;
+			color: $red;
+			padding: 2rem 0;
+			font-size: 1.2rem;
+			&:hover {
+				text-decoration: underline;
+			}
+			a {
+				text-decoration: none;
+				color: $red;
+				padding: 2rem 3rem;
+			}
+		}
+	}
 }
 
-.full {
+.headerBottom {
+	border-bottom: .2rem solid $red;
 	width: 100%;
+	margin: 0 auto;
 }
 
+.aboutTop {
+	border-bottom: .2rem solid $red;
+	width: 100%;
+	margin: 0 auto;
+}
 
+/////FOOTER/////
+footer .container {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
 
+ul#menu-footer-menu {
+	display: flex;
+	flex-direction: row;
+	padding-left: 0;
+	list-style-type: none;
+	width: 60%;
+	li {
+		font-family: $Roboto;
+		text-transform: uppercase;
+		color: $red;
+		padding: 1.5rem 0;
+		font-size: 1.2rem;
+		&:hover {
+			text-decoration: underline;
+		}
+		a {
+			text-decoration: none;
+			color: $red;
+			padding: 2rem 3rem;
+		}
+	}
+}
+
+/////HOME PAGE/HEADER/////
+.main {
+	display: flex;
+	flex-direction: column;
+}
+
+.main h2 {
+	margin: auto;
+	padding-top: 4rem;
+	padding-bottom: 3rem;
+    text-transform: uppercase;
+    font-family: $Raleway;
+    font-weight: bolder;
+    color: $red;
+    font-size: 2.5rem;
+    letter-spacing: .8rem;
+}
+
+.container p {
+	padding: 1.65rem 0;
+	font-size: 1rem;
+	font-family: $Roboto;
+	text-transform: uppercase;
+	color: $red;
+	a {
+		text-decoration: none;
+		color: $red;
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+}
 
 
 
