--- a/sass/style.scss
+++ b/sass/style.scss
@@ -38,11 +38,32 @@ body {
 
 
 //////HEADER//////
+header {
+	div.logo {
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-end;
+		i {
+			font-size: 1.8rem;
+			padding: 1rem;
+			color: $red;
+			display: none;
+			padding-bottom: 0;
+		}
+	}
+}
 .navHeader {
 	display: flex;
 	flex-direction: row;
-	justify-content: flex-end;
-	margin: 1rem 0;
+	justify-content: space-between;
+	margin: 0;
+	h1 {
+		font-size: 2.6rem;
+		font-family: $Roboto;
+		color: $red;
+		text-transform: uppercase;
+		letter-spacing: .4rem;
+	}
 	ul#menu-header-menu {
 		width: 60%;
 		display: flex;
@@ -56,7 +77,7 @@ body {
 			font-family: $Roboto;
 			text-transform: uppercase;
 			color: $red;
-			padding: 2rem 0;
+			padding: 3rem 0;
 			font-size: 1.2rem;
 			&:hover {
 				text-decoration: underline;
@@ -64,7 +85,39 @@ body {
 			a {
 				text-decoration: none;
 				color: $red;
-				padding: 2rem 3rem;
+				padding: 3rem;
+			}
+		}
+	}
+}
+
+div.logo2 {
+	padding-top: 3rem;
+    font-size: 2rem;
+    display: none;
+}
+
+nav.navHeader {
+	i {
+		display: none;
+	}
+}
+
+div.mobileNav {
+	display: none;
+	ul#menu-header-menu-1 {
+		list-style: none;
+		text-align: right;
+		padding-right: 3rem;
+		margin-top: 0;
+		li {
+			padding: 1rem 0;
+			a {
+				text-decoration: none;
+				color: $red;
+				font-size: 1.23rem;
+				text-transform: uppercase;
+				font-family: $Roboto;
 			}
 		}
 	}
@@ -81,6 +134,81 @@ body {
 	width: 100%;
 	margin: 0 auto;
 }
+
+div.aboutImages {
+	width: 80%;
+	margin: 0 auto;
+	margin-bottom: 3rem;
+}
+
+div.flickity-slider {
+	img {
+		height: 35rem;
+		overflow: hidden;
+		width: 100%;
+	}
+}
+
+.gallery-cell {
+	width: 100%;
+}
+
+@media (max-width: 1050px) {
+	.navHeader {
+		ul#menu-header-menu {
+			display: none;
+		}
+	}
+	header {
+		div.logo {
+			i {
+				display: block;
+				padding-top: 3rem;
+			}
+		}
+	}
+}
+
+@media (max-width: 480px) {
+	.navHeader {
+		display: flex;
+		flex-direction: column;
+		h1 {
+			margin: 0 auto;
+		}
+		div.logo i {
+			margin: 0 auto;
+		}
+	}
+}
+
+@media (max-width: 480px) {
+	div.flickity-slider {
+		img {
+			height: 30rem;
+			overflow: hidden;
+			width: 100%;
+		}
+	}
+
+	.gallery-cell {
+		width: 100%;
+	}
+	div.aboutImages {
+		width: 95%;
+	}
+
+}
+
+@media (max-width: 390px) {
+	.navHeader {
+		h1 {
+			font-size: 2rem;
+		}
+	}
+}
+
+
 
 /////FOOTER/////
 footer .container {
@@ -112,6 +240,52 @@ ul#menu-footer-menu {
 	}
 }
 
+@media (max-width: 820px) {
+	footer {
+		div.container {
+			display: flex;
+			flex-direction: column-reverse;	
+			p {
+				margin: 0 auto;
+
+			}
+		}
+		div.menu-footer-menu-container {
+			margin: 0 auto;
+		}
+		ul#menu-footer-menu.menu {
+			margin-bottom: 0;
+			li {
+				padding-bottom: 0;
+			}
+		}
+	}
+}
+
+@media (max-width: 580px) {
+	footer {
+		div.container {
+			p {
+				font-size: .7rem;
+			}
+		}
+		ul#menu-footer-menu.menu {
+			li {
+				font-size: 1rem;
+			}
+		}
+	}
+}
+
+@media (max-width: 520px) {
+	ul#menu-footer-menu.menu {
+		display: flex;
+		flex-direction: column;
+		li {
+			text-align: center;
+		}
+	}
+}
 /////HOME PAGE/HEADER/////
 .main {
 	display: flex;
@@ -125,7 +299,7 @@ ul#menu-footer-menu {
     text-transform: uppercase;
     font-family: $Raleway;
     font-weight: bolder;
-    color: $red;
+    color: $darkGrey;
     font-size: 2.5rem;
     letter-spacing: .8rem;
     padding-bottom: .5rem;
@@ -166,6 +340,19 @@ div.hero {
 	}
 }
 
+@media (max-width: 480px) {
+	div.main {
+		h2 {
+			font-size: 1.6rem;
+		}
+	div.mainContent {
+		p {
+			font-size: 1rem;
+		}
+	}
+
+	}
+}
 
 ////EVENTS PAGE/////
 div.content {
@@ -187,26 +374,57 @@ div.eventsMain {
 		text-transform: uppercase;
 	    font-family: $Raleway;
 	    font-weight: bolder;
-	    color: $red;
+	    color: $darkGrey;
 	    font-size: 2.5rem;
 	    text-align: center;
 	    letter-spacing: .8rem;
 	}
 	img {
-		width: 20rem;
-		height: 20rem;
+		max-width: 100%;
 		border: .2rem solid $red;
 	}
 }
 
 div.events {
-	display: flex;
-	flex-direction: row;
+	width: 100%;
+}
+
+div.singleEvent {
+	width: 99.3%;
+	padding: 2rem;
+	padding-top: 0;
+	float: left;
 }
 
 div.eventsInfo {
-	display: flex;
-	flex-direction: row;
+	border-left: .2rem solid $red;
+	border-right: .2rem solid $red;
+	border-bottom: .2rem solid $red;
+	text-align: center;
+	h3 {
+		margin-top: 0;
+		font-size: 1.4rem;
+    	padding-top: 1rem;
+    	text-transform: uppercase;
+    	font-family: $Roboto;
+    	letter-spacing: .2rem;
+    	margin-bottom: .5rem;
+	}
+	p {
+		width: 80%;
+		margin: 0 auto;
+		padding-bottom: 2rem;
+		font-family: $Roboto;
+		font-size: 1.2rem;
+		a {
+			text-transform: uppercase;
+			text-decoration: none;
+			color: $red;
+			&:hover {
+				text-decoration: underline;
+			}
+		}
+	}
 }
 
 ul.xoxo {
@@ -230,6 +448,47 @@ ul.xoxo {
 	}
 }
 
+div.eventsSidebar {
+	ul {
+		list-style-type: none;
+		padding-left: 0;
+		li {
+			padding: .5rem 0;
+			text-align: center;
+			a {
+				text-decoration: none;
+				text-decoration: none;
+				color: $red;
+				text-transform: uppercase;
+				font-size: 1rem;
+				letter-spacing: .1rem;
+				&:hover {
+					text-decoration: underline;
+				}
+			}
+		}
+	}
+}
+
+div.eventsSidebar {
+	li {
+		list-style: none;
+		padding-bottom: 2rem;
+	}
+	li#search-2 {
+		text-align: center;
+	}
+
+}
+
+h3.widget-title {
+	text-align: center;
+	font-family: $Roboto;
+	text-transform: uppercase;
+	font-size: 1.5rem; 
+	font-weight: light;
+	letter-spacing: .8rem;
+}
 
 div.tagcloud {
 	li#tag_cloud-2 {
@@ -241,6 +500,107 @@ div.tagcloud {
 	}
 	a.tag-link {
 		color: $lightBlue;
+	}
+}
+
+@media (max-width: 820px) {
+	h3.widget-title {
+		font-size: 1.2rem;
+	}
+	div.eventsSidebar {
+		ul {
+			li {
+				a {
+					font-size: .9rem;
+				}
+			}
+		}
+	}
+}
+
+@media (max-width: 750px) {
+	div.content {
+		div.eventsSidebar {
+			margin-left: 0;
+			width: 40%;
+		}
+	}
+	div.eventsMain {
+		width: 60%;
+	}
+}
+
+@media (max-width: 550px) {
+	div.eventsMain {
+		h2 {
+			font-size: 1.7rem;
+		}
+	}
+	h3.widget-title {
+		font-size: .9rem;
+	}
+	div.eventsSidebar {
+		ul {
+			li {
+				a {
+					font-size: .7rem;
+				}
+			}
+		}
+	}
+	div.eventsSidebar {
+		form#searchform {
+			input[type=submit] {
+				width: 80%;
+			}
+		}
+	}
+	div.eventsInfo {
+		p {
+			font-size: 1rem;
+		}
+	}
+}
+
+@media (max-width: 479px) {
+	div.content {
+		div.eventsSidebar {
+			margin-left: 0;
+			width: 50%;
+			form#searchform {
+				input.searchsubmit {
+					width: 70%;
+				}	
+			}
+		}
+	}
+	div.eventsMain {
+		width: 50%;
+	}
+
+	div.eventsInfo {
+		h3 {
+			font-size: 1rem;
+		}
+		p {
+			display: none;
+		}
+	}
+}
+
+@media (max-width: 450px) {
+	div.content {
+		display: flex;
+		flex-direction: column-reverse;
+		div.eventsMain, div.eventsInfo, div.eventsSidebar {
+			width: 100%;
+		}
+		div.eventsSidebar {
+			border-top: .2rem solid $red;
+			li {
+				padding-bottom: 0;
+			}
+		}
 	}
 }
 
@@ -260,6 +620,7 @@ div.newsContainer {
 		font-family: $Roboto;
 		letter-spacing: .8rem;
 		border-radius: .5rem;
+		padding-bottom: 0;
 		a {
 			text-decoration: none;
 			color: $darkGrey;
@@ -300,7 +661,7 @@ div.newsContent {
 	}
 }
 
-div.newsSidebar {
+div.newsSidebar, div.eventsSidebar {
 	width: 30%;
 	border-left: .2rem solid $red;
 	border-right: .2rem solid $red;
@@ -315,15 +676,43 @@ div.newsSidebar {
 				text-align: center;
 				a {
 					text-decoration: none;
-					color: $darkGrey;
+					color: $red;
 					text-transform: uppercase;
-					font-size: .9rem;
+					font-size: 1rem;
+					letter-spacing: .1rem;
 					&:hover {
-						color: $red;
+						text-decoration: underline;
 					}
 				}
 			}
 		}
+	}
+}
+
+div.newsSidebar, div.eventsSidebar {
+	input {
+		padding: .8rem;
+		background-color: $lightBlue;
+		border: .2rem solid $red;
+		width: 70%;
+		outline: none;
+		border-radius: .5rem;
+	}
+	input[type=submit] {
+		padding: .7rem;
+		background-color: $red;
+		color: $lightBlue;
+		text-transform: uppercase;
+		width: 50%;
+		font-family: $Raleway;
+	}
+	h2 {
+		border: none;
+		font-size: 1.4rem;
+	}
+	div {
+		padding-bottom: 2rem;
+		text-align: center;
 	}
 }
 
@@ -341,7 +730,420 @@ section.entry-content {
 			width: 90%;
 			height: 100%;
 		}
+	a {
+		color: $red;
+		text-transform: uppercase;
+		text-decoration: none;
+		padding: .3rem;
+	}
+}
+}
+
+div.tagcloud {
+	display: flex;
+	flex-direction: column;
+	justify: center;
+	margin-top: 1.5rem;
+	a {
+		width: 70%;
+		margin: .2rem auto;
+		padding: .5rem 0;
+		border-radius: .5rem;
+		background-color: $red;
+		text-decoration: none;
+		color: $lightBlue;
+		text-transform: uppercase;
+	}
+}
+
+p.alignleft, p.alignright {
+	margin-bottom: 3rem;
+	a {
+		text-transform: uppercase;
+		font-family: $Raleway;
+		text-decoration: none;
+		font-size: 1.2rem;
+		color: $red;
+		border: .2rem solid $red;
+		padding: .4rem;
 	}
 }
 
 
+@media (max-width: 750px) {
+		div.newsSidebar {
+			width: 40%;
+		}
+		div.newsContent {
+			width: 60%;
+	}
+}
+
+@media (max-width: 620px) {
+	div.newsSidebar {
+		h2.newsTitle {
+			font-size: 1rem;
+		}
+	}
+	div.newsSidebar div {
+		padding-bottom: 0;
+		ul {
+			li {
+				a {
+					font-size: .7rem;
+				}
+			}
+		}
+	}
+}
+
+@media (max-width: 550px) {
+	div.newsSidebar {
+		width: 50%;
+		input[type=submit] {
+			width: 80%;
+		}
+	}
+	div.newsContent {
+		width: 50%;
+		article {
+			p {
+				font-size: 1rem;
+			}
+		}
+		h2.entry-title {
+			a {
+				font-size: 1.2rem;
+			}
+		}
+	}
+}
+
+@media (max-width: 480px) {
+	div.newsContainer {
+		display: flex;
+		flex-direction: column-reverse;
+		div.newsContent {
+			width: 100%;
+		}
+		div.newsSidebar {
+			width: 100%;
+			border-bottom: .2rem solid $red;
+			input[type=submit] {
+				width: 70%;
+			}
+		}
+	}
+
+}
+
+//CONTACT PAGE//
+div.contactMain {
+	padding-bottom: 4rem;
+	h2, h2.h2address {
+		text-transform: uppercase;
+		padding: .7rem 0;
+		color: $darkGrey;
+		letter-spacing: 0.6rem;
+		font-size: 1.6rem;
+		font-family: $Raleway;
+		padding-bottom: 0;
+		font-weight: bolder;
+		margin-bottom: .7rem;
+		margin-top: 0;
+		padding-top: 2rem;
+	}
+	h2.h2address {
+		margin-top: 2.5rem;
+	}
+	p.address2 {
+		font-size: 1rem;
+		letter-spacing: .3rem;
+		font-family: $Raleway;
+		text-transform: uppercase;
+		color: $darkGrey;
+		margin-top: .2rem;
+
+	}
+	p.address {
+		color: $red;
+		text-transform: uppercase;
+		font-size: 1rem;
+		letter-spacing: .3rem;
+		font-family: $Raleway;
+		margin-top: .2rem;
+		font-weight: bolder;
+	}
+}
+
+div.hoursContent {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	ul {
+		padding-left: 0;
+		list-style-type: none;
+		font-family: $Raleway;
+	}
+}
+
+div.leftHours {
+	ul {
+		padding-left: 0;
+		padding-right: 2rem;
+		li {
+			text-transform: uppercase;
+			letter-spacing: .3rem;
+			color: $red;
+			text-align: left;
+			font-family: $Raleway;
+			font-weight: bolder;
+		}
+	}
+}
+
+div.rightHours {
+	ul {
+		padding-left: 0;
+		li {
+			text-transform: uppercase;
+			letter-spacing: .1rem;
+			color: $darkGrey;
+			text-align: right;
+		}
+	}
+}
+div.hours {
+	float: left;
+	width: 50%;
+	text-align: center;
+}
+
+div.contactForm {
+	p:first-of-type{
+		text-transform: uppercase;
+		padding: .7rem 0;
+		color: $darkGrey;
+		letter-spacing: 0.6rem;
+		font-size: 1.6rem;
+		font-family: $Raleway;
+		padding-bottom: 0;
+		font-weight: bolder;
+		padding-top: 2rem;
+		text-align: center;
+	}
+	div.theForm {
+		text-align: center;
+		input {
+			width: 40%;
+			padding: .5rem;
+			border: .2rem solid $red;
+			outline: none;
+			text-transform: uppercase;
+			color: $darkGrey;
+			background-color: $lightBlue;
+		}
+		input[type=submit] {
+			width: 10%;
+			margin-left: 21.5rem;
+			background-color: $lightBlue;
+		}
+		textarea {
+			width: 40%;
+			padding: .3rem;
+			border: .2rem solid $red;
+			outline: none;
+			text-transform: uppercase;
+			height: 8rem;
+			color: $darkGrey;
+			background-color: $lightBlue;
+		}
+	}
+}
+
+@media (max-width: 700px) {
+	div.contactMain {
+		display: flex;
+		flex-direction: column;
+		div.hours {
+			width: 100%;
+			input {
+				width: 90%;
+			}
+		}
+	}
+	div.theForm {
+		width: 100%;
+		div.wpcf7 {
+			input {
+				width: 80%;
+			}
+			textarea {
+				width: 80%;
+			}
+			input[type=submit] {
+				width: 60%;
+				margin-left: 0;
+				margin: 0 auto;
+				background-color: $red;
+				color: $lightBlue;
+			}
+		}
+	}
+}
+
+@media (max-width: 480px) {
+	div.contactMain {
+		h2, h2.h2address, p {
+			font-size: 1.4rem;
+		}
+	}
+}
+
+////SINGLE PAGE////
+
+div.singleentry-content {
+	p {
+		width:90%;
+		margin: 0 auto;
+		color: $darkGrey;
+		font-size: 1.4rem;
+		line-height: 2rem;
+		padding-top: 0;
+		text-align: center;
+		padding-bottom: 0;
+	}
+	p:first-child{
+		padding-top: 2rem;
+		text-align: center;
+	}
+	p:nth-child(2) {
+		padding-top: 0;
+	}
+}
+
+h1.entry-title {
+	margin: 2rem auto;
+	text-align: center;
+	font-family: $Roboto;
+	text-transform: uppercase;
+	letter-spacing: .8rem;
+	padding: 1rem 0;
+	font-size: 1.7rem;
+	color: $darkGrey;
+	width: 80%;
+	border: .2rem solid $red;
+	border-radius: .5rem;
+	margin-bottom: 0;
+}
+
+div.entry-meta {
+	text-align: center;
+	text-transform: uppercase;
+	background-color: $red;
+	width: 60%;
+	padding: 1rem 0;
+	border-radius: .5rem;
+	margin: 0 auto;
+	font-size: 1.2rem;
+	color: $lightBlue;
+	span, a {
+		text-decoration: none;
+		color: $lightBlue;
+	}
+}
+
+p.nav-previous, p.nav-next {
+	a {
+		font-size: 1.2rem;
+		padding: 1rem;
+		border: .2rem solid $red;
+		font-family: $Raleway;
+	}
+}
+
+p.nav-previous {
+	float:left;
+	margin-top: 4rem;
+}
+
+p.nav-next {
+	float: right;
+	margin-top: 4rem;
+}
+
+
+////AUTHOR & ARCHIVE PAGES////
+div.archivecontent {
+	display: flex;
+	flex-direction: column;
+	h1 {
+		margin: 3rem auto;
+		padding: 1rem 0;
+		background-color: $red;
+		border-radius: .5rem;
+		text-transform: uppercase;
+		color: $lightBlue;
+		font-family: $Roboto;
+		letter-spacing: .8rem;
+		text-align: center;
+		width: 90%;
+		margin-bottom: 1rem;
+	}
+	article {
+		h2 {
+			text-align: center;
+			padding-top: 1rem;
+			width: 80%;
+			a {
+				text-decoration: none;
+				font-size: 1.5rem;
+				color: $red;
+				padding: 1rem 0;
+			}
+		}
+		h5 {
+			text-align: center;
+			font-size: 1.2rem;
+			margin-top: 0;
+			text-transform: uppercase;
+			color: $darkGrey;
+			margin-bottom: 0;
+			font-family: $Raleway;
+			letter-spacing: .3rem;
+		}
+	}
+}
+
+div.archivecontent {
+	section.entry-content {
+		p {
+			color: $darkGrey;
+			padding-bottom: 3rem;
+			text-transform: initial;
+			border-bottom: .2rem solid $red;
+		}
+		img {
+			display: block;
+			margin: 0 auto;
+			padding-top: 2rem;
+		}
+	}
+}
+
+div.archivecontent {
+	p.alignleft {
+		width: 50%;
+		margin: 0;
+		float: left;
+		a {
+		}
+	}
+	p.alignright {
+		width: 50%;
+		margin: 0;
+		float: right;
+		a {
+		}
+	}
+}
